opam-version: "2.0"
version: "0.2.6"
name: "ISO8601"
authors: [ "Julien Sagot" ]
maintainer: ["c-cube" "ocaml-community"]
homepage: "http://github.com/ocaml-community/ISO8601.ml/"
dev-repo: "git+https://github.com/ocaml-community/ISO8601.ml.git"
doc: "http://ocaml-community.github.io/ISO8601.ml/"
bug-reports: "https://github.com/ocaml-community/ISO8601.ml/issues"
synopsis: "ISO 8601 and RFC 3999 date parsing for OCaml"
depends: [
  "dune" {>= "2.7"}
  "base-unix"
  "ocaml" {>= "4.03.0" }
  "stdlib-shims" {with-test}
  "odoc" {with-doc}
  "ounit2" {with-test}
  "bisect_ppx" {with-test & >= "2.5" & dev}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
