(executable
 (name ISO8601_TEST)
 (modules :standard \ Test)
 (flags :standard -warn-error -a)
 (libraries unix oUnit ISO8601))

(alias
 (name runtest)
 (deps ISO8601_TEST.exe)
 (action
  (run ./ISO8601_TEST.exe)))

(executable
 (name test)
 (modules test)
 (flags :standard -warn-error -a)
 (libraries unix alcotest ISO8601))

(alias
 (name runtest)
 (deps test.exe)
 (action
  (run ./test.exe)))
